test/functions/lambda/lambdaBadNumArgs.good
lambdaBadNumArgs.chpl:2: error: cannot capture lambda because it refers to outer variables
lambdaBadNumArgs.chpl:2: note: such as 'f', here
lambdaBadNumArgs.chpl:2: note: such as 'g', here
